# go-strength-model

./: .gitignore  Dockerfile  LICENSE  LICENSE-MIT  README.md  calc_performance.py  sgffilter.py
csv/: games_search_e.csv  games_search_t.csv  games_search_v.csv  rating.csv  trickratings.csv
datasetviewer/: CMakeLists.txt  dataset.cpp  dataset.h  global.cpp  global.h  main.cpp
extractor/: CMakeLists.txt  board.cpp  board.h  extractor.cpp  fileutils.cpp  fileutils.h  global.cpp  global.h  namecompat.cpp  rules.cpp  rules.h  sgf.cpp  sgf.h  sgffilter.cpp
extractor/core/: fileutils.cpp  fileutils.h  global.cpp  global.h  logger.cpp  rand.h
extractor/game/: board.cpp  board.h  boardhistory.cpp  rules.cpp  rules.h
logs/: checkdatasetlog.txt  evaluationlog.txt  evaluationlog_2024-02-05.txt  filterlog.txt  findpatterns.txt  glicko2log.txt  pocevaluationlog.txt  poctestloss.txt  poctraininglog.txt  poctrainloss.txt  proofofconcept-traininglog.txt  results.txt  search1.txt  search2.txt  searchstat.txt  stats_judgedgames.txt  testloss.txt  traininglog.txt  trainloss.txt  trickplay.txt
logs/poctraining/: poctraininglog.txt  poctrainloss.txt  pocvalidationloss.txt
logs/search1/: training_0_0.txt  training_0_1.txt  training_0_10.txt  training_0_11.txt  training_0_12.txt  training_0_13.txt  training_0_14.txt  training_0_2.txt  training_0_3.txt  training_0_4.txt  training_0_5.txt  training_0_6.txt  training_0_7.txt  training_0_8.txt  training_0_9.txt  training_1_0.txt  training_1_1.txt  training_1_10.txt  training_1_11.txt  training_1_12.txt  training_1_13.txt  training_1_14.txt  training_1_2.txt  training_1_3.txt  training_1_4.txt  training_1_5.txt  training_1_6.txt  training_1_7.txt  training_1_8.txt  training_1_9.txt  training_2_0.txt  training_2_1.txt  training_2_10.txt  training_2_11.txt  training_2_12.txt  training_2_13.txt  training_2_14.txt  training_2_2.txt  training_2_3.txt  training_2_4.txt  (+140 more)
logs/search2/: training_0_0.txt  training_0_1.txt  training_0_10.txt  training_0_11.txt  training_0_12.txt  training_0_13.txt  training_0_14.txt  training_0_2.txt  training_0_3.txt  training_0_4.txt  training_0_5.txt  training_0_6.txt  training_0_7.txt  training_0_8.txt  training_0_9.txt  training_1_0.txt  training_1_1.txt  training_1_10.txt  training_1_11.txt  training_1_12.txt  training_1_13.txt  training_1_14.txt  training_1_2.txt  training_1_3.txt  training_1_4.txt  training_1_5.txt  training_1_6.txt  training_1_7.txt  training_1_8.txt  training_1_9.txt  training_2_0.txt  training_2_1.txt  training_2_10.txt  training_2_11.txt  training_2_12.txt  training_2_13.txt  training_2_14.txt  training_2_2.txt  training_2_3.txt  training_2_4.txt  (+169 more)
plots/: HOWTO.md  deviation.py  estimate_vs_label.py  netvis.py  ploss_rating.py  poctrainingplot.py  ratings.py  search.py  trainingprogress.py  wrloss_rating.py
python/: analyzedataset.py  calc_performance.py  checkdataset.py  findpatterns.py  label_gameset.py  name_ratings.py  ogsfit.py  ogsratings.py  random_split.py  rank.py  recentmoves.py  searchstat.py  sgffilter.py  stochasticmodel.py  trickboards.py
python/model/: deviation.py  eval.py  hpsearch.py  moves_dataset.py  run.py  strengthnet.py  train.py
python/more/: age.py  fixtrainloss.py  glicko_scorecheck.py  stats_judgedgames.py  trainingmean.py  unzip_featurecache.py
python/plots/: HOWTO.md  deviation.py  estimate_vs_label.py  fontconfig.py  gamelength.py  netvis.py  ploss_rating.py  ratings.py  search.py  trainingprogress.py  trickratings.py  wrloss_rating.py
python/webapp/: webapp.py
python/webapp/static/: styles.css
python/webapp/templates/: index.html
trickplay/: problem1.sgf  problem10.sgf  problem11.sgf  problem12.sgf  problem13.sgf  problem14.sgf  problem15.sgf  problem16.sgf  problem17.sgf  problem18.sgf  problem19.sgf  problem2.sgf  problem20.sgf  problem21.sgf  problem22.sgf  problem23.sgf  problem24.sgf  problem25.sgf  problem26.sgf  problem27.sgf  problem28.sgf  problem29.sgf  problem3.sgf  problem30.sgf  problem31.sgf  problem32.sgf  problem33.sgf  problem34.sgf  problem35.sgf  problem36.sgf  problem37.sgf  problem38.sgf  problem39.sgf  problem4.sgf  problem40.sgf  problem41.sgf  problem42.sgf  problem43.sgf  problem44.sgf  problem45.sgf  (+40 more)
